--- a/Osa2/phonebook/frontend/src/index.css
+++ b/Osa2/phonebook/frontend/src/index.css
@@ -30,7 +30,10 @@ border-radius: 5px 0 0 5px;
 
 .message {
 display: flex;
-align-items: center;
+flex-direction: row;
+justify-content: center;
+text-align: center;
+/*align-items: center;*/
 color: #839494;
 background: #bbc2d4;
 font-size: 20px;
@@ -38,11 +41,17 @@ border-style: solid;
 border-radius: 5px;
 padding: 10px;
 margin-bottom: 10px;
-margin-left: 20em;
-margin-right: 20em;
+margin-left: 25em;
+margin-right: 25em;
+/*position: absolute;
+top: 25%;
+right: 25%;*/
 }
 
 .notification {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 background-color: #bbd4d1;
 color: #839494;
 display: flex;
@@ -50,6 +59,10 @@ align-items: center;
 }
 
 .error {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+text-align: center;
 max-width: 75rem;
 color:#839483;
 }
@@ -62,7 +75,7 @@ color: #839494;
 }
 
 .delete:focus {
-color:#bbd4d1;
+color:powderblue;
 }
 
 /*
