--- a/Osa2/countries/src/index.css
+++ b/Osa2/countries/src/index.css
@@ -1,25 +1,51 @@
-/*:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: bisque;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+.App {
+  text-align: center;
+  max-width: 100%;
+  padding: 16px;
+  box-sizing: border-box;
+  background-color: bisque;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 800px;
+  font-size: 16px;
+  overflow-y: auto;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}*/
+@media (max-width: 768px) {
+  .App {
+    font-size: 14px;
+  }
+}
+
 .country-flag {
   width: 160px;
-  height: 120px;
+  height: 110px;
   /* Add any other styles you want here */
 }
 
-a {
+.lang {
+  text-align: center;
+  padding-right: 10%;
+}
+
+.icon {
+  width: 100px;
+  height: 100px;
+}
+
+/*a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -39,7 +65,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
+} */
 
 /*button {
   border-radius: 8px;
